--- a/style.css
+++ b/style.css
@@ -5,7 +5,212 @@
 *{
     margin:0;
     padding:0;
+    box-sizing:content-box;
 }
 
-/* Fill your code*/
+.cotainer{
+    width: 100%;
+    heigth:100vh;
+    overflow: hidden;
+}
+.head{
+    position: relative;
+    background-color: brown;
+    height: 112px;
+    width:100%;
+}
+.lines{
+    display: flex;
+}
+hr{
+    transform: rotate(300deg);
+    width: 10%;
+    top: 50px;
+    left:-2px;
+    position: relative;
+    
+}
+.cake{
+    position: relative;
+    border:2px solid rgb(146,31,31);
+    border-radius: 50%;
+    width:200px;
+    background-color: black;
+    top:10px;
+    left:43%;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    z-index: 1;
+    display: flex;
+}
+.cake h1{
+    position: relative;
+    color:white;
+    top:-20px;
+}
+.one{
+    position: relative;
+    width:100%;
+    height: 600px;
+    background-color: purple;
+    display: flex;
+    justify-content: space-between;
+}
+.menu img{
+    position:absolute;
+    top:48%;
+    left:90px;
+    width: 300px;
+    height: 250px;
+    z-index: auto;
+}
+.menu-c{
+    position: absolute;
+    top:59%;
+    left:170px;
+    padding:2px;
+    color: white;
+    margin: 2px;
+}
+.cost{
+    line-height: 1.5;
+    right: 10%;
+    
+}
+#price
+{
+    position: relative;
+    text-align: center;
+    line-height: 1;
+    top:-40px;
+    font-size: large;
+}
+.layers{
+    position: relative;
+    top:60%;
+    width:245px;
+    height: 130px;
+    display: flex;
+   
+    flex-direction: column;
+}
+#candle{
+    width: 80px;
+    height: 80px;
+   left:33%;
+   bottom:86%;
+   align-self: center;
+   visibility: hidden;
+    position: absolute;
+    
+   
+}
+#layer1{
+    width:250px;
+    border-radius: 25%;
+    visibility: hidden;
+    padding: 20px;
+    align-self: center;
+    border:2px solid black;
+
+    
+}
+
+#layer2 {
+    width: 200px;
+    
+    visibility: hidden;
+    border-radius: 25%;
+    
+    align-self: center;
+    padding: 20px;
+    
+  }
+  
+  #layer3 {
+    width: 160px;
+    visibility: hidden;
+    align-self: center;
+    border-radius: 25%;
+    
+    padding: 20px;
+  }
+  
+  #layer4 {
+    width: 120px;
+    visibility: hidden;
+    align-self: center;
+    border-radius: 25%;
+   
+    padding: 20px;
+  }
+  
+  #layer5 {
+    width: 80px;
+    align-self: center;
+    visibility: hidden;
+    border-radius: 25%;
+    
+    padding: 20px;
+  }
+  .billing img{
+    position:absolute;
+    top:48%;
+    right:90px;
+    width: 300px;
+    height: 250px;
+    z-index: auto;
+}
+  #bill{
+    position: relative;
+    text-align: center;
+    top:50%;
+    right:10%;
+  }
+  .billing-container{
+    position: absolute;
+    top:53%;
+    right:190px;
+    text-align: center;
+    padding:2px;
+    color: white;
+    margin: 2px;
+  }
+  #bill{
+      position: relative;
+      text-align: center;
+      font-size: large;
+      line-height: 1;
+      right:10%;
+  }
+  #total{
+      line-height: 3;
+  }
+  .footer{
+      position: relative;
+     height: 115px;
+      width: auto;
+      background-color:brown;
+      display: flex;
+      justify-content: space-around;
+  }
+  .footer input[type=button]{
+      position: relative;
+      width:auto;
+      text-align: center;
+      height: 35px;
+      color:white;
+background-color: blueviolet;
+top:30px    ;
+font-size: large;
+  }
+  input[type=button]:hover{
+      cursor: pointer;
+
+  }
+  #BUY:focus{
+      background-color: rgb(55,233,55);
+      color:black;
+  }
 
